<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapLead"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        map:layout_constraintBottom_toTopOf="@id/info_layout"
        map:layout_constraintTop_toTopOf="parent"
        tools:context=".Activity.TripLeadActivity"
        tools:layout_editor_absoluteX="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/trip_lead"
            android:textSize="30sp"
            android:textStyle="bold"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="doShare"
            android:src="@drawable/share_icon"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintStart_toEndOf="@+id/textView5"
            map:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/signal"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/broadcast"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/trip_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            tools:text="Trip Id: 3RPWB-7NNTE" />

        <TextView
            android:id="@+id/trip_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/trip_distance"
            tools:text="Trip Start: Mon Dec 9, 08:29 PM" />

        <TextView
            android:id="@+id/trip_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/trip_id"
            tools:text="Distance: 0.4 km" />

        <TextView
            android:id="@+id/trip_elapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/trip_id"
            tools:text="Elapsed: 00:01:17" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/pause_btn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="toggleTracking"
        android:src="@drawable/pause"
        map:layout_constraintBottom_toTopOf="@+id/info_layout"
        map:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:onClick="stopTrip"
        android:src="@drawable/stop_sign"
        map:layout_constraintBottom_toBottomOf="@+id/pause_btn"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintTop_toTopOf="@+id/pause_btn" />

    <ImageView
        android:id="@+id/gps"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/gps"
        android:visibility="gone"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gps_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/awaiting_gps"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        map:layout_constraintEnd_toEndOf="@+id/gps"
        map:layout_constraintStart_toStartOf="@+id/gps"
        map:layout_constraintTop_toBottomOf="@+id/gps" />

    <TextView
        android:id="@+id/pause"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tracking_paused"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        map:layout_constraintBottom_toBottomOf="@+id/pause_btn"
        map:layout_constraintStart_toEndOf="@+id/pause_btn"
        map:layout_constraintTop_toTopOf="@+id/pause_btn" />

    <TextView
        android:id="@+id/lead_network_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="@string/lead_no_network"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>